--- a/Front end Fundamentals/index.html
+++ b/Front end Fundamentals/index.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DECOHOGAR</title>
+    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <h1>DECOHOGAR</h1>
+        <nav>
+            <ul>
+                <li><a href="#">MUEBLES</a></li>
+                <li><a href="#">ACCESORIOS</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="contenedor">
+            <img class="img-muestra" src="img/1.jpg">
+            <h3>Mesa Nordica</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab inventore, obcaecati fugit aperiam voluptate, molestiae exercitationem autem modi omnis sint esse. Beatae libero reprehenderit consectetur!</p>
+            <p class="precio">Precio: $70d</p>
+            <button>Comprar</button>
+        </div>
+        <div class="contenedor">
+            <img class="img-muestra" src="img/2.png">
+            <h3>Silla Nordica</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, quod. Hic, odio veniam. Illo dicta sapiente porro distinctio labore odit adipisci voluptatem velit laudantium nemo.</p>
+            <p class="precio">Precio: $50</p>
+            <button>Comprar</button>
+        </div>
+        <div class="contenedor">
+            <img class="img-muestra" src="img/3.jpg">
+            <h3>Silla Abstracta</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis officiis, necessitatibus ex quis cum asperiores consectetur dignissimos, ipsa, labore nemo doloribus corrupti aspernatur rerum earum!</p>
+            <p class="precio">Precio: $50</p>
+            <button>Comprar</button>
+        </div>
+        <div class="contenedor">
+            <img class="img-muestra" src="img/4.jpg">
+            <h3>Escritorio</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ex, ea atque blanditiis delectus voluptatem adipisci consectetur, accusantium esse cumque repudiandae quas saepe animi. Molestiae!</p>
+            <p class="precio">Precio: $80</p>
+            <button>Comprar</button>
+        </div>
+        <div class="contenedor">
+            <img class="img-muestra" src="img/5.jpg">
+            <h3>Placard</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nobis quaerat architecto totam minima voluptatibus repellat natus quam voluptate consectetur cumque velit, placeat id eum!</p>
+            <p class="precio">Precio: $150</p>
+            <button>Comprar</button>
+        </div>
+        <div class="contenedor">
+            <img class="img-muestra" src="img/6.jpg">
+            <h3>Juego de mesa y sillas</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam dignissimos impedit, a consequuntur repellendus sit maiores cupiditate exercitationem, praesentium hic voluptatum eveniet vitae quam harum!</p>
+            <p class="precio">Precio: $200</p>
+            <button>Comprar</button>
+        </div>
+    </main>
+    <footer>
+        <p>Gracias por visitarnos!</p>
+    </footer>
 </body>
 </html>
