--- a/Front end Fundamentals/index.html
+++ b/Front end Fundamentals/index.html
@@ -26,7 +26,7 @@
             <img class="img-muestra" src="img/1.jpg">
             <h3>Mesa Nordica</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab inventore, obcaecati fugit aperiam voluptate, molestiae exercitationem autem modi omnis sint esse. Beatae libero reprehenderit consectetur!</p>
-            <p class="precio">Precio: $70d</p>
+            <p class="precio">Precio: $70</p>
             <button>Comprar</button>
         </div>
         <div class="contenedor">
